assets/css/styles.css
.navbar-default{
    color: #fff;
    background:transparent;
    border:none !important;
}
.navbar-nav>li>a:hover{
    text-decoration: underline;
}
.navbar-default .navbar-nav > li > a {
  color: #fff;
  border-bottom: 1px solid transparent;
  padding: 0; /*removing spacing*/
  margin: 14px; /*add spacing*/
}
.collapse.in {
    background-color:#fff !important;
}

/*.navbar {
  background-color: transparent;
  color: #fff;
}*/
.navbar-brand {
  padding: 10px 15px;
  font-size: 20px;
}

nav a {
  background-color: transparent !important;
}

.nav>li>a:hover, .nav>li>a:focus {
    background-color: transparent !important;
}

.active {
  text-decoration: underline;
}

.spacer{
    height:100px;
}

p {
  line-height: 2rem;
}

.button-collapse {
  color: #26a69a;
}

.parallax-container-first {
  padding-top: 200px;
  position: relative;
  overflow: hidden;
  height: 1000px;
  width: 100%;
}
/*.parallax-container {
  min-height: 380px;
  line-height: 0;
  height: auto;
  color: rgba(255,255,255,.9);
}
  .parallax-container .section {
    width: 100%;
  }*/

/*@media only screen and (max-width : 992px) {
  .parallax-container .section {
    position: absolute;
    top: 40%;
  }
  #index-banner .section {
    top: 10%;
  }
}*/

/* ------ TITLE PAGE ----- */
.tj-title {
  color: #264270;
  text-align: center;
  font-family: 'Raleway' !important;
  font-size: 100px;
}

.full-stack {
  text-align: center;
  font-family: 'Bubbler One';
  font-size: 40px;
}

/* ------ ABOUT ------ */
.img-circular {
  margin: auto;
  max-width: 100%;
  height: auto;
  border-radius: 50%;
  overflow: hidden;
}

#about {
  padding: 50px;
  min-height: 400px;
}

.bio {
  padding-top: 50px;
  text-align: center;
  font-family: 'Indie Flower';
}

@media only screen and (max-width : 600px) {
  #index-banner .section {
    top: 0;
  }
}

.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
  font-size: inherit;
}

footer.page-footer {
  margin: 0;
}

